Sat Jan  9 12:45:17 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/CommandProps.pm: rekey doesn't take a list.

	* lib/Mj/TextOutput.pm (rekey): Ditto.

	* lib/Mj/Format.pm (rekey): Ditto.

	* lib/Majordomo.pm (_re_match): Fix fypo.
	(auxremove): Fix typo.

	* lib/Mj/List.pm (subscriber_rekey): Update to properly transform
 	using Mj::Addr.
	(aux_rekey): Ditto.

Fri Jan  8 00:19:40 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MTAConfig.pm (add_alias): Fix dumb typo; meant vutfile,
 	wrote aliasfile.

	* lib/Mj/Format.pm (lists): Remove length limit; just show it all
 	if that's what they want.  Add some blank lines between lists in
 	the long output modes.

	* lib/Mj/Resend.pm (_post): Big changes to accommodate digest
 	generation.  Now working!

	* lib/Mj/Deliver.pm (deliver): Remove some debug stuff.

Wed Jan  6 23:33:44 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* postinstall (set_script_perms): Change mode of top level
 	installation directory as appropriate.  Make sure that it is
 	properly readable by everyone.

Mon Jan  4 20:16:17 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/Token.pm: Add REQUESTOR to substitute the same as
 	REQUESTER in various files.

Sun Jan  3 21:34:25 1999  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (which): For substring search, compile into a
 	substring pattern implicitly and always do the database search by
 	regexp.

Wed Dec 30 13:23:59 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (_list_file_get_string): New function: return a
 	file in a string.

Tue Dec 29 12:28:12 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (archive): Pass in $tmpdir.

Mon Dec 28 14:30:24 1998  Jason L Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Majordomo.pm (archive): Tweaks to handle returns from new
 	digest building functions properly.

	* lib/mj_cf_defs.pl: Change default for digest_index_format to