@@ -477,6 +477,7 @@ sub _post {
   # Inform sender of successful delivery
   
   # Clean up and say goodbye
+  unlink @dfiles;
   for ($i = 0; $i < @ent; $i++) {
     unlink $files[$i];
     $ent[$i]->purge;
